# pailo

./: .dockerignore  .gitignore  AGENTS.md  README.md  Sticker 42.doc  compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 6316720c4c8c_create_mvp_schema.py  6c1b2a9f4d7e_calibrate_label_template_geometry.py  97e55c766e03_add_task_comments.py  a1b2c3d4e5f6_add_improvements_schema.py  b2c3d4e5f678_add_stock_alerts.py  b8c2f4e8d901_seed_mvp_demo_data.py  c3a1f7b2e456_add_site_settings.py  d4a2e8f1c789_add_extended_columns.py  d5e2a1b3c789_add_partner_inquiries.py  e7b3c1d2f456_ensure_label_template_exists.py  f4f0a8c9d123_add_saved_labels.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: dependencies.py  router.py
apps/backend/app/api/v1/: admin.py  auth.py  catalog.py  costing.py  cycle_counts.py  employees.py  health.py  inventory.py  labels.py  operations.py  partners.py  production.py  productivity.py  purchasing.py  quality.py  reports.py  sales.py  settings.py  styles.py  suppliers.py  tasks.py  users.py  whatsapp_reports.py  work_orders.py
apps/backend/app/core/: auth.py  cognito.py  config.py
apps/backend/app/db/: base.py  models.py  session.py
apps/backend/app/modules/costing/: __init__.py  schemas.py
apps/backend/scripts/: clean_sample_data.py  clean_sample_data.sql  export_openapi.py
apps/backend/tests/: test_api.py  test_database_config.py  test_factory_service.py  test_route_handlers.py
(+134 files in other folders)
